--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "scripts": {
     "test": "mocha"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://www.github.com/Gerhardk/i18n-that-works"
+  },
   "keywords": [
     "i18n",
     "internationalization",
